# hash256-miner-py

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  hash256-miner.spec  pyproject.toml
build_support/: pyinstaller_entry.py
hash256_miner/: __init__.py  __main__.py  constants.py  gpu.py  orchestrator.py  protocol.py  rpc.py  tui.py
js-version/hash256-cli/: miner.js  package-lock.json  package.json
kernels/: keccak256_miner.cl
scripts/: win_benchmark.ps1
tests/: test_cli.py  test_gpu.py  test_gpu_kernel.py  test_orchestrator.py  test_protocol.py  test_rpc.py  test_tui.py
